--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "firebase": "^9.17.2",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.1",
