--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.1",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
