--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.0",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
     "antd": "^5.1.7",
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
@@ -25,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
